--- a/MDK-ARM/DeCubeMX_Lib/DeCubeMX_Lib.build_log.htm
+++ b/MDK-ARM/DeCubeMX_Lib/DeCubeMX_Lib.build_log.htm
@@ -26,7 +26,30 @@ Project File Date:  07/15/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'DeCubeMX_Lib'
+Rebuild target 'DeCubeMX_Lib'
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_tim_ex.c...
+assembling startup_stm32f407xx.s...
+compiling stm32f4xx_hal_tim.c...
+compiling su_main.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_exti.c...
+compiling rcc.c...
+compiling system_stm32f4xx.c...
+compiling common.h...
+linking...
+Program Size: Code=372 RO-data=408 RW-data=0 ZI-data=1632  
+FromELF: creating hex file...
 "DeCubeMX_Lib\DeCubeMX_Lib.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +74,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
